<resources>
    <string name="app_name">MyITS Courier</string>
    <!-- Login Message -->
    <string name="login_title">Masuk ke</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="login">Masuk Ke ITS SSO</string>
    <string name="login_subtitle">Kemudahan pengantaran paket dalam satu aplikasi</string>

    <!--App Message-->
    <string name="api_retry_error">Mohon coba kembali!</string>
    <string name="api_default_error">Mohon untuk mencoba kembali!</string>
    <string name="some_error">Tidak ada koneksi internet!</string>
    <string name="no_internet_connection">Tidak ada koneksi internet!</string>
    <string name="retry">Ulangi</string>

    <!-- Sample Text -->
    <!-- HistoryDetailActivity -->
    <string name="welcome_message">Selamat datang</string>
    <string name="sample_name">Adyatma Mahavir Alister Bagaskara</string>
    <string name="zone">Zona</string>
    <string name="zone_code">A</string>

    <!-- list_unit -->
    <string name="sample_departemen">Tata Usaha Departemen X</string>
    <string name="external_package_qty">%1$d paket eksternal</string>
    <string name="internal_package_qty">%1$d pengantaran paket internal</string>
    <string name="pickup_internal_qty">%1$d penjemputan paket internal</string>

    <!-- list_paket -->
    <string name="sample_paket">Tipe Paket</string>
    <string name="package_priority">Prioritas: %1$d</string>
    <string name="package_status">Status: %1$s</string>
    <string name="package_weight">Berat: %1$.3f</string>
    <string name="package_receipt_number">Nomor Resi: %1$s</string>

    <!-- String Resource dari Andre -->
    <string name="home">Beranda</string>
    <string name="history">Riwayat</string>
    <string name="profile">Profil</string>
    <string name="num_of_jobs_text">0 Pekerjaan</string>
    <string name="unit_name_text">Unit Name</string>
    <string name="user_name">Rizky Andre Wibisono</string>
    <string name="location">Zona A</string>
    <string name="peta_zona">Peta Zona</string>
    <string name="logout">Keluar dari akun</string>
    <string name="camera_caption">Letakkan kode QR tepat di area kotak</string>
    <string name="zone_label">Zona</string>
    <string name="today">Hari Ini</string>
    <string name="allday">Semua</string>
    <string name="delivery_type_text">Penjemputan Internal</string>
    <string name="kode">Kode:\u0020</string>
    <string name="shift">Jadwal Pengiriman:\u0020</string>
    <string name="delivery_status_text">Menunggu dijemput</string>
    <string name="code_package_text">ABCDEG6H788</string>
    <string name="shift_text">17 Maret 2021, 08:00 – 10:00</string>
    <string name="unit">Unit</string>
    <string name="pic_package">PIC Paket</string>
    <string name="pic_package_text">Mang Oleh</string>
    <string name="status_package">Status Paket</string>
    <string name="weight_package">Berat Paket</string>
    <string name="weight_package_text">2 Kg</string>
    <string name="num_of_package">Jumlah Paket</string>
    <string name="num_of_package_text">1 Paket</string>
    <string name="description">Deskripsi</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae, tellus id egestas porttitor vitae consectetur sagittis convallis.</string>
    <string name="timeline">Linimasa</string>
    <string name="navigation">Navigasi</string>
    <string name="change_status">Ganti Status</string>
    <string name="status_">Status:\u0020</string>
    <string name="receiver_name_text">Bpk Superman</string>
    <string name="change_package_status">Ganti status paket</string>
    <string name="paket_sudah_dijemput">Paket sudah dijemput</string>
    <string name="paket_sedang_diantar">Paket sedang diantar</string>
    <string name="paket_sudah_sampai">Paket sudah sampai</string>
    <string name="paket_sudah_diterima_pic">Paket sudah diterima PIC</string>
    <string name="confirm">Konfirmasi</string>
    <string name="job_total">Total Pekerjaan</string>
    <string name="total_job_text">0</string>
    <string name="dd_mm_yyyy">dd MM YYYY</string>
    <string name="kode_xxxxxxx">Kode : XXXXXXX</string>
    <string name="home_greeting_sub">Semoga harimu menyenangkan!</string>
    <string name="home_greeting">Halo </string>
    <string name="zone_text">A</string>
    <string name="unit_list">Daftar Unit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unit_name">Unit Teknik Informatika</string>
    <string name="navigation_guide_sub_text">Lalu</string>
    <string name="navigation_guide_main_text">Lurus menuju Jln. Teknik Mesin</string>
    <string name="pic_package_navigation_label">PIC Paket :</string>


    <string name="package_from">Dari: %1$s</string>
    <string name="package_to">Kepada: %1$s</string>
    <string name="unit_name_to">Paket untuk %1$s</string>
    <string name="unit_name_from">Paket dari %1$s</string>
    <string name="unit_from">Unit Asal</string>
    <string name="unit_to">Unit Tujuan</string>
</resources>