<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/blank_space"
        android:checkable="false"
        android:checked="false"
        android:enabled="false"
        android:title="" />
</menu>