<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.home.HomeFragment">

    <!-- home header -->
    <TextView
        android:id="@+id/homeGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/home_greeting"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- home header: user name-->
    <TextView
        android:id="@+id/homeNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/user_name"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toEndOf="@+id/homeGreeting"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeSubGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home_greeting_sub"
        app:layout_constraintBottom_toTopOf="@+id/separatorHorizontal"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- home header: zone -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:contentPadding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/zoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/zone_label"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/zoneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/zone_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!-- separator -->
    <View
        android:id="@+id/separatorHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <!-- list of units -->
    <TextView
        android:id="@+id/homeListViewTitle"
        style="@style/TextAppearance.MyITSCourier.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/unit_list"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separatorHorizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeListview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/transparent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeListViewTitle"
        tools:listitem="@layout/fragment_home_unit_list_item" />
</androidx.constraintlayout.widget.ConstraintLayout>