<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jobstatus.JobStatusActivity">

    <!-- toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MyITSCourier.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            app:title="Ganti Status" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <!-- status radio selector -->
        <TextView
            android:id="@+id/changeStatusLabel"
            style="@style/TextAppearance.MyITSCourier.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/change_packet_status"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/statusRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checkedButton="@+id/status_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeStatusLabel">

            <RadioButton
                android:id="@+id/status_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/paket_sudah_dijemput" />

            <RadioButton

                android:id="@+id/status_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/paket_sedang_diantar" />

            <RadioButton
                android:id="@+id/status_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/paket_sudah_sampai" />

            <RadioButton
                android:id="@+id/status_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/paket_sudah_diterima_pic" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- floating button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:elevation="16dp"
        android:orientation="horizontal"
        android:paddingTop="6dp">

        <Button
            android:id="@+id/confirmStatusButton"
            style="@style/Widget.MyITSCourier.Button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginHorizontal="32dp"
            android:backgroundTint="@color/colorSecondary"
            android:text="@string/confirm" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>