<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="12dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tv_nama_tata_usaha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_departemen"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_green_light"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tv_jumlah_eksternal"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/external_package_qty"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/holo_blue_bright"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/tv_jumlah_internal"
                    android:layout_marginVertical="4dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/internal_package_qty"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/holo_red_light"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/tv_jumlah_penjemputan"
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/pickup_internal_qty"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.cardview.widget.CardView>