<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/statusLabel"
                style="@style/TextAppearance.MyITSCourier.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/status_"
                android:textColor="@color/colorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statusText"
                style="@style/TextAppearance.MyITSCourier.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delivery_status_text"
                android:textColor="@color/colorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/statusLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/separatorHorizontal"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorJustGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusLabel" />

            <View
                android:id="@+id/separatorVertical"
                android:layout_width="2dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_line_separator_vertical_rounded"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separatorHorizontal" />

            <TextView
                android:id="@+id/deliveryTypeText"
                style="@style/TextAppearance.MyITSCourier.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/delivery_type_text"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/separatorVertical"
                app:layout_constraintTop_toBottomOf="@+id/separatorHorizontal" />

            <TextView
                android:id="@+id/kodeLabel"
                style="@style/TextAppearance.MyITSCourier.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/kode"
                app:layout_constraintStart_toEndOf="@+id/separatorVertical"
                app:layout_constraintTop_toBottomOf="@+id/deliveryTypeText" />

            <TextView
                android:id="@+id/kodeText"
                style="@style/TextAppearance.MyITSCourier.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/code_packet_text"
                app:layout_constraintStart_toEndOf="@+id/kodeLabel"
                app:layout_constraintTop_toBottomOf="@+id/deliveryTypeText" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separatorVertical"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/packetIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_box_24"
                        android:backgroundTint="@color/colorJustGrey" />

                    <TextView
                        android:id="@+id/numOfPacket"
                        style="@style/TextAppearance.MyITSCourier.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/num_of_packet_text"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"

                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/personIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_outline_person_outline_24"
                        android:backgroundTint="@color/colorJustGrey" />

                    <TextView
                        android:id="@+id/staffName"
                        style="@style/TextAppearance.MyITSCourier.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/receiver_name_text"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>